:bug: Fixes button overflow

--- a/set-web/src/components/button/Button.scss
+++ b/set-web/src/components/button/Button.scss
@@ -12,6 +12,7 @@
   position: relative;
   font-size: 1rem;
   transition: 0.2s transform, 0.2s opacity;
+  overflow: hidden;
 
   &.fullwidth {
     width: 100%;
